--- a/templates/index.html.erb
+++ b/templates/index.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Polyglot Workflows 101</title>
+    <title>Advanced Data Structures 101</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
@@ -38,7 +38,7 @@
         Advanced Data Structures is released under a
         <a href="http://creativecommons.org/licenses/by-nc-sa/3.0" target="_blank" rel="noopener">Creative Commons BY-NC-SA 3.0 License.</a>
       </p>
-      <p>️️❤️  Maintained with love by your Polyglot Instructors <a href="https://polyglotcoding.com/about-us" target="_blank" rel="noopener">Bea</a>.</p>
+      <p>️️❤️  Maintained with love by <a href="https://youtube.com/c/beacoder" target="_blank" rel="noopener">Beacoder</a>.</p>
     </div>
   </body>
 </html>
