--- a/templates/lab.html.erb
+++ b/templates/lab.html.erb
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lab <%= lab.number %> - Polyglot Workflows 101</title>
+    <title>Lab <%= lab.number %> - Advanced Data Structures 101</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
     <meta name="description" content="A guided tour that walks through the fundamentals of Git">
     <meta name="theme-color" content="#0000ff">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" media="screen" href="reset.css"> 
-    <link rel="stylesheet" media="screen" href="screen.css"> 
+    <link rel="stylesheet" media="screen" href="reset.css">
+    <link rel="stylesheet" media="screen" href="screen.css">
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-1142510-7']);
@@ -31,7 +31,7 @@
     <div class="layout">
       <div id="index">
         <p class="link-home">
-          <a href="index.html"><span>Polyglot Workflows 101</span></a>
+          <a href="index.html"><span>Advanced Data Structures 101</span></a>
         </p>
         <button class="link-menu">Menu</button>
         <nav tabindex="0">
