--- a/templates/index.html.erb
+++ b/templates/index.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Advanced Data Structures 101</title>
+    <title>Polyglot Workflows 101</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
@@ -23,22 +23,20 @@
   </head>
 
   <body id="index_body" class="animation-fade-in">
-    <h1>Advanced Data Structures</h1>
+    <h1>Polyglot Workflows 101</h1>
 
-    <p><em>Delve deep into higher-level data structures. This course is intense and will be harder than most sections.
-    Data Structures are fundamental to Computer Science, and you will have to know them for interview questions.
-    If you're confused, make sure you ask the instructors for further clarification. Doing all exercises is mandatory.</em></p>
+    <p><em>Polyglot Workflows 101 is a guided tour that walks through installing the tools you will
+    need to start with Polyglot, and learn the workflow you will follow as you proceed in the course</em></p>
 
     <hr>
 
-    <a class="start" href="lab_01.html">Start Advanced Data Structures</a>
+    <a class="start" href="lab_01.html">Start Polyglot Workflows 101</a>
 
     <div class="footer">
       <p>
-        Advanced Data Structures is released under a
-        <a href="http://creativecommons.org/licenses/by-nc-sa/3.0" target="_blank" rel="noopener">Creative Commons BY-NC-SA 3.0 License.</a>
+        © Polyglot Workflows 101
       </p>
-      <p>️️❤️  Maintained with love by <a href="https://youtube.com/c/beacoder" target="_blank" rel="noopener">Beacoder</a>.</p>
+      <p>️️❤️  Maintained with love by your Polyglot Instructors <a href="https://polyglotcoding.com/about-us" target="_blank" rel="noopener">Bea</a>.</p>
     </div>
   </body>
 </html>
