--- a/src/home.css
+++ b/src/home.css
@@ -40,7 +40,7 @@ hr {
 }
 
 a {
-  color: blue;
+  color: #ff4859;
 }
 
 ul {
@@ -56,7 +56,7 @@ ul {
   color: #fff;
   font-family: "SF Mono", "SFMono-Regular", "Roboto Mono", Consolas, "Liberation Mono", Menlo, Courier, monospace;
   text-decoration: none;
-  background: blue;
+  background: #ff4859;
 }
 
 .footer {
