--- a/templates/index.html.erb
+++ b/templates/index.html.erb
@@ -23,18 +23,18 @@
   </head>
 
   <body id="index_body" class="animation-fade-in">
-    <h1>Polyglot Workflows 101</h1>
+    <h1>Python 101</h1>
 
     <p><em>Polyglot Workflows 101 is a guided tour that walks through installing the tools you will
     need to start with Polyglot, and learn the workflow you will follow as you proceed in the course</em></p>
 
     <hr>
 
-    <a class="start" href="lab_01.html">Start Polyglot Workflows 101</a>
+    <a class="start" href="lab_01.html">Start Python 101</a>
 
     <div class="footer">
       <p>
-        © Polyglot Workflows 101
+        © Python 101
       </p>
       <p>️️❤️  Maintained with love by your Polyglot Instructors <a href="https://polyglotcoding.com/about-us" target="_blank" rel="noopener">Bea</a>.</p>
     </div>
