--- a/templates/lab.html.erb
+++ b/templates/lab.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lab <%= lab.number %> - Polyglot Workflows 101</title>
+    <title>Lab <%= lab.number %> - Python 101</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
@@ -31,7 +31,7 @@
     <div class="layout">
       <div id="index">
         <p class="link-home">
-          <a href="index.html"><span>Polyglot Workflows 101</span></a>
+          <a href="index.html"><span>Python 101</span></a>
         </p>
         <button class="link-menu">Menu</button>
         <nav tabindex="0">
