--- a/src/home.css
+++ b/src/home.css
@@ -40,7 +40,7 @@ hr {
 }
 
 a {
-  color: #ff4859;
+  color: #00868b;
 }
 
 ul {
@@ -56,7 +56,7 @@ ul {
   color: #fff;
   font-family: "SF Mono", "SFMono-Regular", "Roboto Mono", Consolas, "Liberation Mono", Menlo, Courier, monospace;
   text-decoration: none;
-  background: #ff4859;
+  background: #00868b;
 }
 
 .footer {
@@ -66,6 +66,7 @@ ul {
 .footer a {
   color: #333;
 }
+x
 
 @media all and (max-width: 550px) {
   body { padding-bottom: 60px; }
