--- a/screen.css
+++ b/screen.css
@@ -91,12 +91,12 @@
     height: 10px;
     border-radius: 10px;
     margin-top: -5px;
-    background: #007f8e;
+    background: #ff4859;
   }
 
   #index nav a:hover {
     color: #fff;
-    background: #007f8e;
+    background: #ff4859;
   }
 
   #index nav a:hover::before {
@@ -244,7 +244,7 @@ code {
 
 h2 {
   padding-top: 1rem;
-  color: #007f8e;
+  color: #ff4859;
   font-size: 1.75rem;
   counter-increment: content-heading-counter;
 }
@@ -362,7 +362,7 @@ tr:hover {background-color: #f5f5f5;}
 
 .foot-navigation a:hover {
   color: #fff;
-  background: #007f8e;
+  background: #ff4859;
 }
 
 .foot-navigation a:hover svg path {
@@ -442,7 +442,7 @@ tr:hover {background-color: #f5f5f5;}
     text-align: center;
     color: #fff;
     font-size: 1.5rem;
-    background: #007f8e;
+    background: #ff4859;
     content: counter(content-heading-counter);
   }
 }
