--- a/home.css
+++ b/home.css
@@ -56,7 +56,7 @@ ul {
   color: #fff;
   font-family: "SF Mono", "SFMono-Regular", "Roboto Mono", Consolas, "Liberation Mono", Menlo, Courier, monospace;
   text-decoration: none;
-  background: #ff4859;
+  background: #00868b;
 }
 
 .footer {
